--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# My Appy Key
+API_KEY="52b7001946c183203509dceff3469d89"
+# My Appy Key
+API_URL="https://api.themoviedb.org/3/"
